[package]
name = "contest-llamas"
version = "0.3.1-alpha.0"
authors = ["Luis Galup"]
edition = "2021"

description = "Common algorithms and data structures for programming contests"
repository = "https://github.com/legalup/rust-llama-cookbook"
readme = "README.md"
keywords = ["competitive", "programming", "codeforces"]
categories = ["algorithms", "data-structures"]
license = "MIT"

[badges]
travis-ci = { repository = "EbTech/rust-algorithms", branch = "master" }
